predecting with best model + accuracy confusion matrix

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1493,6 +1493,215 @@
    "source": [
     "result = resnet_model.evaluate(test_generator)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Making predictions with best model (ResNet50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import load_model\n",
+    "resnet50_model = load_model('finalmodel-ResNet50.hdf5')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'adeno': {0: 99, 1: 5, 2: 0, 3: 16},\n",
+       " 'large': {0: 6, 1: 43, 2: 0, 3: 2},\n",
+       " 'normal': {0: 0, 1: 1, 2: 53, 3: 0},\n",
+       " 'squamous': {0: 7, 1: 3, 2: 0, 3: 80}}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "paths = [\"data/test/adenocarcinoma/\", \"data/test/large.cell.carcinoma/\", \"data/test/normal/\", \"data/test/squamous.cell.carcinoma/\"]\n",
+    "results = {\"adeno\":{0:0, 1:0, 2:0, 3:0},\n",
+    "            \"large\":{0:0, 1:0, 2:0, 3:0},\n",
+    "            \"normal\":{0:0, 1:0, 2:0, 3:0},\n",
+    "            \"squamous\":{0:0, 1:0, 2:0, 3:0}}\n",
+    "\n",
+    "for path, key in zip(paths, results.keys()):\n",
+    "    \n",
+    "    for file in os.listdir(path):\n",
+    "        img = tf.keras.utils.load_img(\n",
+    "            (path + file), target_size=(460, 460)\n",
+    "        )\n",
+    "        img_array = tf.keras.utils.img_to_array(img)\n",
+    "        img_array = tf.expand_dims(img_array, 0)\n",
+    "        prediction = resnet50_model.predict(img_array, verbose=0)\n",
+    "        results[key][np.argmax(prediction)] = results.get(key).get(np.argmax(prediction),0) + 1\n",
+    "\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall accuracy is : 87.30%\n",
+      "\n",
+      "Adeno cancer detection accuracy is : 82.50%\n",
+      "Large cell cancer detection accuracy is : 84.31%\n",
+      "Normal chest detection accuracy is : 98.15%\n",
+      "Squamous cell cancer detection accuracy is : 88.89%\n",
+      "\n",
+      "Confusion Matrix :\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>adeno</th>\n",
+       "      <td>99</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>large</th>\n",
+       "      <td>6</td>\n",
+       "      <td>43</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>normal</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>squamous</th>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           0   1   2   3\n",
+       "adeno     99   5   0  16\n",
+       "large      6  43   0   2\n",
+       "normal     0   1  53   0\n",
+       "squamous   7   3   0  80"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(results)\n",
+    "\n",
+    "print(\"Overall accuracy is : {:.2f}%\\n\".format((df[\"adeno\"][0] + df[\"large\"][1] + df[\"normal\"][2] + df[\"squamous\"][3]) / 315 * 100))\n",
+    "\n",
+    "print(\"Adeno cancer detection accuracy is : {:.2f}%\".format(df[\"adeno\"][0] / df[\"adeno\"].sum() * 100))\n",
+    "print(\"Large cell cancer detection accuracy is : {:.2f}%\".format(df[\"large\"][1] / df[\"large\"].sum() * 100))\n",
+    "print(\"Normal chest detection accuracy is : {:.2f}%\".format(df[\"normal\"][2] / df[\"normal\"].sum() * 100))\n",
+    "print(\"Squamous cell cancer detection accuracy is : {:.2f}%\".format(df[\"squamous\"][3] / df[\"squamous\"].sum() * 100))\n",
+    "\n",
+    "print(\"\\nConfusion Matrix :\")\n",
+    "df.transpose()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Predict for one picture"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 397ms/step\n",
+      "This image most likely belongs to squamous.cell.carcinoma with a 98.31 percent confidence.\n"
+     ]
+    }
+   ],
+   "source": [
+    "img_path = \"data/test/squamous.cell.carcinoma/000111.png\"\n",
+    "\n",
+    "class_names=list(test_generator.class_indices.keys())\n",
+    "\n",
+    "img = tf.keras.utils.load_img(img_path, target_size=(460, 460))\n",
+    "img_array = tf.keras.utils.img_to_array(img)\n",
+    "img_array = tf.expand_dims(img_array, 0)\n",
+    "\n",
+    "prediction = resnet50_model.predict(img_array)\n",
+    "\n",
+    "print(\n",
+    "    \"This image most likely belongs to {} with a {:.2f} percent confidence.\"\n",
+    "    .format(class_names[np.argmax(prediction)], 100 * np.max(prediction))\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
