--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -48,6 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# defining paths of train, validation and test data\n",
     "train_path = \"data/train\"\n",
     "valid_path = \"data/valid\"\n",
     "test_path = \"data/test\""
@@ -73,19 +74,21 @@
     "N_CLASSES = 4\n",
     "BATCH_SIZE = 32\n",
     "\n",
-    "\n",
+    "# loading training data and rescaling it using ImageDataGenerator\n",
     "train_datagen = ImageDataGenerator(dtype='float32', rescale= 1./255.)\n",
     "train_generator = train_datagen.flow_from_directory(train_path,\n",
     "                                                   batch_size = BATCH_SIZE,\n",
     "                                                   target_size = (305,430),\n",
     "                                                   class_mode = 'categorical')\n",
     "\n",
+    "# loading validation data and rescaling it using ImageDataGenerator\n",
     "valid_datagen = ImageDataGenerator(dtype='float32', rescale= 1./255.)\n",
     "valid_generator = valid_datagen.flow_from_directory(valid_path,\n",
     "                                                   batch_size = BATCH_SIZE,\n",
     "                                                   target_size = (305,430),\n",
     "                                                   class_mode = 'categorical')\n",
     "\n",
+    "# loading test data and rescaling it using ImageDataGenerator\n",
     "test_datagen = ImageDataGenerator(dtype='float32', rescale = 1.0/255.0)\n",
     "test_generator = test_datagen.flow_from_directory(test_path,\n",
     "                                                   batch_size = BATCH_SIZE,\n",
@@ -125,17 +128,20 @@
     }
    ],
    "source": [
+    "# extracting classes from our test data generator\n",
     "class_names=list(test_generator.class_indices.keys())\n",
     "print(class_names)\n",
     "\n",
+    "# creating a figure to plot the images on\n",
     "fig = plt.figure(figsize=(20,5))\n",
     "\n",
+    "# plotting 15 images (3 rows and 5 cols) with their respective classes\n",
     "image_batch,label_batch = test_generator[1]\n",
     "for i in range(15):\n",
     "    ax = fig.add_subplot(3,5,i+1,xticks = [], yticks = [])\n",
     "    ax.imshow(image_batch[i])\n",
     "    plt.axis('off')\n",
-    "    plt.title(class_names[np.argmax(label_batch[i])])\n"
+    "    plt.title(class_names[np.argmax(label_batch[i])])"
    ]
   },
   {
@@ -188,8 +194,11 @@
     }
    ],
    "source": [
+    "# defining the coefficient that our regularizer will use\n",
     "weight_decay = 1e-3\n",
     "\n",
+    "# building a sequential CNN model and adding layers to it\n",
+    "# dropout and the regularizer are used in general to prevent overfitting\n",
     "first_model = Sequential([\n",
     "    Conv2D(filters = 8 , kernel_size = 2, padding = 'same', activation = 'relu', \n",
     "    input_shape = image_shape), MaxPooling2D(pool_size = 2),\n",
@@ -203,6 +212,7 @@
     "    Dropout(0.5),\n",
     "    Dense(4,activation='softmax')\n",
     "])\n",
+    "# showing the summary of our model (layers and number of parameters)\n",
     "first_model.summary()"
    ]
   },
@@ -499,11 +509,16 @@
     }
    ],
    "source": [
+    "# checkpointer to save the model only if it was improved\n",
     "checkpointer = ModelCheckpoint('chestmodel.hdf5',verbose=1, save_best_only= True)\n",
+    "# early stopping to stop the training if our validation loss didn't decrease for (15) consecutive epochs\n",
     "early_stopping = EarlyStopping(monitor= 'val_loss', patience= 15)\n",
+    "# Adam, best optimiser for deep learning models to help with the training\n",
     "optimizer = optimizers.Adam(learning_rate= 0.00001, decay= 1e-5)\n",
-    "\n",
+    "# setting our loss function and which metric to evaluate\n",
     "first_model.compile(loss= 'categorical_crossentropy', optimizer= optimizer, metrics=['acc'])\n",
+    "\n",
+    "# TRAIN\n",
     "history = first_model.fit_generator(train_generator,\n",
     "                    steps_per_epoch = 20,\n",
     "                    epochs = 80,\n",
@@ -529,12 +544,16 @@
     }
    ],
    "source": [
+    "# add history of accuracy and validation accuracy to the plot\n",
     "plt.plot(history.history['acc'], label = 'train',)\n",
     "plt.plot(history.history['val_acc'], label = 'valid')\n",
     "\n",
+    "# adding legend and labels\n",
     "plt.legend(loc = 'upper left')\n",
     "plt.xlabel('epochs')\n",
     "plt.ylabel('accuracy')\n",
+    "\n",
+    "# show the plot\n",
     "plt.show()"
    ]
   },
@@ -552,6 +571,7 @@
     }
    ],
    "source": [
+    "# see if it's good at predecting new inputs\n",
     "result = first_model.evaluate(test_generator)"
    ]
   },
@@ -568,7 +588,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### DenseNet201"
+    "#### **DenseNet201**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Importing Data"
    ]
   },
   {
@@ -591,6 +619,7 @@
     "N_CLASSES = 4\n",
     "BATCH_SIZE = 32\n",
     "\n",
+    "# preprocess data to a predefined densenet inputs\n",
     "train_datagen = ImageDataGenerator(dtype='float32', preprocessing_function=densenet.preprocess_input)\n",
     "train_generator = train_datagen.flow_from_directory(train_path,\n",
     "                                                   batch_size = BATCH_SIZE,\n",
@@ -611,6 +640,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Downloading the densenet201 model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -625,12 +662,21 @@
     }
    ],
    "source": [
+    "# loading the densenet201 model without the last layer and with predefined weights\n",
     "dense_model = DenseNet201(include_top=False, pooling='avg', weights='imagenet', input_shape = (image_shape))\n",
     "\n",
-    "# make all layers except conv5 layers not trainable\n",
+    "# make all layers except conv5 layers (last convolutional layer) not trainable\n",
     "for layer in dense_model.layers:\n",
     "    if 'conv5' not in layer.name:\n",
     "        layer.trainable = False"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Building our model which includes densenet201"
    ]
   },
   {
@@ -664,12 +710,21 @@
     }
    ],
    "source": [
+    "# starting with densenet and adding layers to build our final model\n",
     "densenet_model = Sequential()\n",
     "densenet_model.add(dense_model)\n",
     "densenet_model.add(Flatten())\n",
     "densenet_model.add(BatchNormalization())\n",
     "densenet_model.add(Dense(N_CLASSES, activation='softmax'))\n",
     "densenet_model.summary()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Hyperparameters setting and training"
    ]
   },
   {
@@ -974,6 +1029,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1025,6 +1088,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Importing Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1064,17 +1135,34 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Downloading the resnet50 model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# loading the resnet50 model without the last layer and with predefined weights\n",
     "res_model = ResNet50(include_top=False, pooling='avg', weights='imagenet', input_shape = (image_shape))\n",
     "\n",
-    "# make all layers except conv5 layers not trainable\n",
+    "# make all layers except conv5 layers (last convolutional layer) not trainable\n",
     "for layer in res_model.layers:\n",
     "    if 'conv5' not in layer.name:\n",
     "        layer.trainable = False"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Building our model which include densenet201"
    ]
   },
   {
@@ -1112,6 +1200,7 @@
     }
    ],
    "source": [
+    "# starting with densenet and adding layers to build our final model\n",
     "resnet_model = Sequential()\n",
     "resnet_model.add(res_model)\n",
     "resnet_model.add(Dropout(0.4))\n",
@@ -1120,6 +1209,14 @@
     "resnet_model.add(Dropout(0.4))\n",
     "resnet_model.add(Dense(N_CLASSES, activation='softmax'))\n",
     "resnet_model.summary()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Hyperparameters setting and training"
    ]
   },
   {
@@ -1459,6 +1556,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1516,6 +1621,7 @@
    "outputs": [],
    "source": [
     "from keras.models import load_model\n",
+    "# load our saved model\n",
     "resnet50_model = load_model('finalmodel-ResNet50.hdf5')"
    ]
   },
@@ -1546,14 +1652,17 @@
     }
    ],
    "source": [
+    "# defining paths for each class in the test folder\n",
     "paths = [\"data/test/adenocarcinoma/\", \"data/test/large.cell.carcinoma/\", \"data/test/normal/\", \"data/test/squamous.cell.carcinoma/\"]\n",
+    "# initializing a dictionary to store predictions\n",
     "results = {\"adeno\":{0:0, 1:0, 2:0, 3:0},\n",
     "            \"large\":{0:0, 1:0, 2:0, 3:0},\n",
     "            \"normal\":{0:0, 1:0, 2:0, 3:0},\n",
     "            \"squamous\":{0:0, 1:0, 2:0, 3:0}}\n",
     "\n",
+    "# load images, predict and store predictions made by the model\n",
     "for path, key in zip(paths, results.keys()):\n",
-    "    \n",
+    "\n",
     "    for file in os.listdir(path):\n",
     "        img = tf.keras.utils.load_img(\n",
     "            (path + file), target_size=(460, 460)\n",
@@ -1658,6 +1767,7 @@
     }
    ],
    "source": [
+    "# convert the dictionary to a dataframe for better representation\n",
     "df = pd.DataFrame(results)\n",
     "\n",
     "print(\"Overall accuracy is : {:.2f}%\\n\".format((df[\"adeno\"][0] + df[\"large\"][1] + df[\"normal\"][2] + df[\"squamous\"][3]) / 315 * 100))\n",
@@ -1694,16 +1804,21 @@
     }
    ],
    "source": [
+    "# define the image's path\n",
     "img_path = \"data/test/squamous.cell.carcinoma/000111.png\"\n",
     "\n",
+    "# get classes names\n",
     "class_names=list(test_generator.class_indices.keys())\n",
     "\n",
+    "# preprocess the image so the model can treat it properly\n",
     "img = tf.keras.utils.load_img(img_path, target_size=(460, 460))\n",
     "img_array = tf.keras.utils.img_to_array(img)\n",
     "img_array = tf.expand_dims(img_array, 0)\n",
     "\n",
+    "# predict with our loaded model\n",
     "prediction = resnet50_model.predict(img_array)\n",
     "\n",
+    "# result\n",
     "print(\n",
     "    \"This image most likely belongs to {} with a {:.2f} percent confidence.\"\n",
     "    .format(class_names[np.argmax(prediction)], 100 * np.max(prediction))\n",
