--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1162,7 +1162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Building our model which include densenet201"
+    "- Building our model which includes resnet50"
    ]
   },
   {
